# chaos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.pypi.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: bench_e2e.cpp
bindings/: chaos_py.cpp
docs/: README.md  benchmarks.md  cli.md  concepts.md  cpp-api.md  getting-started.md  python-sdk.md
examples/: bench_import.py  concurrent_async.py  hnsw_scale.py  low_level.py  metadata.py  persistence.py  quickstart.py  sync_basic.py
include/chaos/: arena.hpp  corpus.hpp  distance.hpp  embedder.hpp  engine.hpp  flat_index.hpp  hnsw_index.hpp  index.hpp  timing.hpp  tokenizer.hpp
python/chaos/: __init__.py  __main__.py  _core.pyi  client.py  models.py
scripts/: ci_fetch_onnxruntime.sh  fetch_model.sh
src/: embedder_onnx.cpp  engine.cpp  flat_index.cpp  hnsw_index.cpp  tokenizer.cpp
tests/: test_distance.cpp  test_hnsw.cpp  test_tokenizer.cpp
